support GitHub auto generate exe file v4

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,10 +48,15 @@ jobs:
         if (Test-Path subtitle_cache.json) { Copy-Item subtitle_cache.json dist\ }
         if (Test-Path translation_cache.json) { Copy-Item translation_cache.json dist\ }
         
-    - name: 從 CHANGELOG 或 Git Tag 取得版本號
+    - name: 從 CHANGELOG、Git Tag 或 Release 取得版本號
       id: get_version
       run: |
-        if ($env:GITHUB_REF -like 'refs/tags/v*') {
+        if ($env:GITHUB_EVENT_NAME -eq 'release') {
+          # 從 release 事件取得版本號
+          $RELEASE_JSON = Get-Content $env:GITHUB_EVENT_PATH -Raw | ConvertFrom-Json
+          $VERSION = $RELEASE_JSON.release.tag_name -replace '^v', ''
+          echo "從 Release 事件取得版本號: $VERSION"
+        } elseif ($env:GITHUB_REF -like 'refs/tags/v*') {
           # 從 git tag 取得版本號（例如 v1.0.0 -> 1.0.0）
           $VERSION = $env:GITHUB_REF -replace 'refs/tags/v', ''
           echo "從 Git Tag 取得版本號: $VERSION"
@@ -92,7 +97,17 @@ jobs:
         path: dist/*
         retention-days: 30
         
-    - name: 創建 GitHub Release
+    - name: 上傳檔案到現有 Release（當透過 release 事件觸發時）
+      if: github.event_name == 'release'
+      uses: softprops/action-gh-release@v1
+      with:
+        files: dist/english_learning-*.exe
+        tag_name: ${{ github.event.release.tag_name }}
+        draft: false
+        prerelease: false
+        token: ${{ secrets.GITHUB_TOKEN }}
+        
+    - name: 創建新的 GitHub Release（當推送代碼或標籤時）
       if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
       uses: softprops/action-gh-release@v1
       with:
